[SG-1379] More spacing fixes.

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-resource-collection.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-resource-collection.scss
@@ -63,6 +63,10 @@
     padding-right: 0;
   }
 
+  .paragraph--type--text {
+    margin-bottom: 80px;
+  }
+
   .paragraph--type--resource-section {
     margin-bottom: 60px;
   }
