--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-document.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-document.scss
@@ -1,5 +1,5 @@
 .paragraph--type--document {
-  .paragraph {
+  .document {
     margin-bottom: 63px;
   }
 
